--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="grid.css">
+	<link href="https://cdn.statically.io/gh/caitken-com/css-grid/main/grid.css" rel="stylesheet" />
 
 	<style>
 	html { font-family: "Open Sans", sans-serif; scroll-behavior: smooth; }
