--- a/demo.html
+++ b/demo.html
@@ -72,7 +72,7 @@
 			<h2>Usage</h2>
 		</div>
 
-		<pre>&lt;link href=&quot;https://cdn.statically.io/gh/caitken-com/css-grid/main/grid.min.css&quot; rel=&quot;stylesheet&quot; /&gt;</pre>
+		<pre>&lt;link href=&quot;https://cdn.statically.io/gh/caitken-com/css-grid/main/grid.css&quot; rel=&quot;stylesheet&quot; /&gt;</pre>
 
 	</section>
 
